Adds sample image.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
 <li>Integration of Vim into tmux and tmux into iTerm 2.</li>
 <li>Mouse and window integration, allowing selections within tmux panes, not across them.</li>
 <li>Vim packages that provide git integration, command- and block-completion, fuzzy file search and ease of testing.</li>
-</ul><h2>Installation</h2>
+</ul>
+
+<div class="img">
+  <image src="images/sample_screen.jpg" alt="sample screen" />
+</div>
+
+<h2>Installation</h2>
 
 <p>As first step, you should fork the project, as this will make it easier to customize your installation. After you're done, you can run:</p>
 
@@ -136,6 +142,6 @@ set complete=.,w,b"
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
   </body>
 </html>
