--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ set ruler           "always show position
 set showcmd
 set incsearch
 set laststatus=2    "full status bar
-set t_Co=256        "256 colors - requires a properly configured terminal emulator
+set t_Co=256        "256 colors - requires a configured terminal emulator
 syntax on           "turn syntax highlight on
 
 filetype plugin indent on "let plugins manage indentation
