--- a/index.html
+++ b/index.html
@@ -43,17 +43,39 @@
 <li>Integration of Vim into tmux and tmux into iTerm 2.</li>
 <li>Mouse and window integration, allowing selections within tmux panes, not across them.</li>
 <li>Vim packages that provide git integration, command- and block-completion, fuzzy file search and ease of testing.</li>
-</ul>
+</ul><p>Documentation is a work in progress, will be extended throughout time.</p>
 
-<div class="img">
-  <image src="images/sample_screen.jpg" alt="sample screen" />
-</div>
+<h2>Preliminary Thanks</h2>
 
-<h2>Installation</h2>
+<p>Hermes combines plugins, settings, snippets, gists, ideas from countless developers around the world. We wish to thank:</p>
+
+<ul>
+<li>The <a href="http://www.vim.org/">Vim</a> team;</li>
+<li>The <a href="http://tmux.sourceforge.net/">Tmux</a> team;</li>
+<li>The Bash and <a href="http://ridiculousfish.com/shell/">Fish</a> team;</li>
+<li>The <a href="http://mxcl.github.com/homebrew/">Homebrew</a> team;</li>
+<li>
+<a href="http://tpo.pe/">Tim Pope</a>. Seriously, you're awesome;</li>
+<li>
+<a href="http://thoughtbot.com/">Thoughtbot</a> for their dotfiles, essential in getting the Tmux configuration right;</li>
+<li>
+<a href="http://vimcasts.org/">Vimcasts</a>, for showing how powerful Vim can be.</li>
+</ul><h2>Installation</h2>
+
+<h3>Prerequisites</h3>
+
+<p>Hermes relies on Homebrew and RVM to work properly. While the former is a de facto standard in the Mac OsX development community, there are a good number of developers that use RBenv instead, so support for that is in the pipeline.</p>
+
+<p>If they're not available, the installer script will halt. Please refer to the original guides for instructions if you need them.</p>
+
+<h3>Fork first!</h3>
 
 <p>As first step, you should fork the project, as this will make it easier to customize your installation. After you're done, you can run:</p>
 
-<pre><code>curl https://raw.github.com/&lt;your username&gt;/Hermes/master/go.bash | bash
+<pre><code>mkdir -p ~/.hermes
+git clone https://github.com/&lt;your_github_username&gt;/Hermes.git ~/.hermes
+cd ~/.hermes
+./install.bash
 </code></pre>
 
 <p>This will perform the following actions:</p>
@@ -62,7 +84,30 @@
 <li>Check that you have all the needed Homebrew dependencies</li>
 <li>Backup any file or folder that would be overwritten by the installer process</li>
 <li>Install all dotfiles and plugins available in the <code>hermes</code> directory and symlink them to the right locations in your home folder</li>
-</ul><p>You may also want to add Hermes's repository as upstream, so you can pull in the changes done on the main trunk whenever you need.</p>
+</ul><p>You may also want to add Hermes's repository as upstream, so you can pull in the changes done on the main trunk whenever you need to.</p>
+
+<h3>What's included in the installer</h3>
+
+<p>The installer will:</p>
+
+<ul>
+<li>check for dependencies</li>
+<li>backup any existing dotfile that would be overwritten in a timestamped tar file that you can use to restore your machine</li>
+<li>install the needed software for homebrew</li>
+<li>create a <code>~/hermes</code> directory and symlink its content to your home folder where every piece of software expects to find its main configuration file(s)</li>
+</ul><p>Hermes includes:</p>
+
+<ul>
+<li>configuration and plugins for Vim</li>
+<li>configuration for Tmux</li>
+<li>configuration and additional functionality for two shells: Bash and Fish.</li>
+<li>settings for <code>gem</code>, <code>ack</code>, <code>pow</code>, <code>pry</code> and <code>irb</code>
+</li>
+</ul><p>In addition, Hermes glues all components together so they work properly among them and with the rest of the os. Two examples are setting support for the system clipboard and mouse integration where needed.</p>
+
+<h3>Updates</h3>
+
+<p>Being a git based project, you can update Hermes by simply pulling from the remote. If you forked, please remember to add the original repo as upstream, otherwise it's just a matter of pulling from origin.</p>
 
 <h2>How it's built</h2>
 
@@ -97,7 +142,7 @@ set ruler           "always show position
 set showcmd
 set incsearch
 set laststatus=2    "full status bar
-set t_Co=256        "256 colors - requires a configured terminal emulator
+set t_Co=256        "256 colors - requires a properly configured terminal emulator
 syntax on           "turn syntax highlight on
 
 filetype plugin indent on "let plugins manage indentation
@@ -135,13 +180,133 @@ set wildmode=list:longest,list:full
 set complete=.,w,b"
 </code></pre>
 
-<p>These settings will let you efficiently edit any file whose type is supported by default, and that already covers javascript and ruby.</p>
+<p>These settings will let you efficiently edit any file whose type is supported by default, and that already covers javascript and ruby. The enable standard features like line numbering and syntax highlight but also take care of some compatibility settings with OsX and iTerm (like mouse support and clipboard sharing).</p>
+
+<h4>Plugins</h4>
+
+<p>Plugins are a powerful way to extend Vim's capabilities. Implementation may change, however expectations from a modern text editor can be condensed in the following requirements:</p>
+
+<ul>
+<li>Support for fuzzy search inside a directory tree, so that I can easily open a file by name without manually browsing the tree itself;</li>
+<li>Full text search inside a directory tree;</li>
+<li>Snippet support with expansion, tab stops and completion (in a Textmate fashion);</li>
+<li>Integration with the testing framework, so that I can run tests with shortcuts without leaving the editor;</li>
+<li>Tabs and split windows, so I can have tests and implementation visible at the same time and I can easily switch from one to the other.</li>
+<li>Language specific features, like syntax awareness for indentation conventions</li>
+</ul><p>Needless to say, other text editors support these features, like Sublime Text 2 or Emacs. Vim, however, combines this with the modal editing approach, becoming an extremely effective text manipulation machine.</p>
+
+<p>Hermes provides a good number of plugins, aiming to strike a balance between features and speed. You can see the complete list under <code>hermes/vim/bundle</code>, but some highlights are:</p>
+
+<ul>
+<li>
+<a href="https://github.com/kien/ctrlp.vim">Ctrlp</a>: fuzzy finder, supports file and tag based search.</li>
+<li>
+<a href="https://github.com/msanders/snipmate.vim">Snipmate</a>: heavily inspired by Textmate, tab completion based on snippet files that can be language specific.</li>
+<li>
+<a href="https://github.com/epmatsw/ag.vim">The silver searcher</a>: vim bindings for the crazy fast ack alternative.</li>
+<li>
+<a href="https://github.com/vim-scripts/tComment">TComment</a>: toggle comments in any language.</li>
+<li>
+<a href="https://github.com/tpope/vim-rails">Rails.vim</a>: shortcuts, generators and settings for a Ruby on Rails project. Absolutely killer.</li>
+<li>
+<a href="https://github.com/benmills/vimux">Vimux</a>: a bridge with Tmux to send text and commands to a Tmux pane. This plugins is essential for the whole testing support topic.</li>
+</ul><p>There are, however, arguments that can be made against plugin abuse:</p>
+
+<ul>
+<li>Vim has ways and conventions to accomplish certain tasks, and while it's possible to change this, it's important to try to understand the vim way first and break it only if strictly necessary;</li>
+<li>One of Vim's benefits is speed and low memory footprint, which makes it always responsive even when opening huge files (like logs). An extremely complicated configuration with tons of plugins can make this harder;</li>
+<li>Sometimes a plugin is not necessary, instead a smaller but better conceived setting in <code>.vimrc</code> is enough;</li>
+<li>Albeit powerful, it's a text editor and it should just do this job, according the one thing well philosophy.</li>
+</ul><p>Vim's approach to plugin management is a bit counterintuitive: by default, Vim looks into <code>~/.vim</code> for additional scripts to load, divided into subfolders according to the circumstances when they need to be activated. For example, a script can be split into the <code>plugin</code> and the <code>autoload</code> directory, the former for the bulk, load-once functionality while the latter for anything that requires constant recalculation. This means that a manual installation affects multiple directories, becoming cumbersome to manage and update.</p>
+
+<p>Enter <a href="https://github.com/tpope/vim-pathogen">Pathogen</a>, a package manager that makes this process painless and that reverses the perspective, as it lets you organize plugins by name. With Pathogen, you can simply clone a repository in your <code>~/.vim</code> folder and you're done. This is the first stepping stone to a proper dotfiles management through Github, where you can add every plugin as a git submodule and update them all with a single command.</p>
+
+<p>Hermes uses the git submodule pattern: because every plugin can be kept in a single folder thanks to Pathogen, it's possible to add it as a submodule in the <code>hermes/vim/bundle</code> folder. This makes it dead easy to add other plugins when needed:</p>
+
+<pre><code>cd ~/.hermes
+git submodule add &lt;github-url&gt; hermes/vim/bundle/&lt;plugin-name&gt;
+</code></pre>
+
+<p>And you're done! In a similar fashion, updating plugins is also straightforward</p>
+
+<pre><code>cd ~/.hermes
+git submodule foreach git pull origin master
+</code></pre>
+
+<p>As in every other github based project, it's advisable to fork a plugin if you need to make changes that go beyond simple configuration (which we usually add to <code>~/.hermes/vim/plugins.vim</code>). In that case, you need to remove the original submodule and add it back again using your fork as a url.</p>
+
+<p>Pathogen loads the content of <code>~/.vim/bundle</code> by default. including itself. This is controlled by the first two lines in the <code>~/.vimrc</code> file:</p>
+
+<pre><code>" loading pathogen at runtime as it's bundled
+runtime bundle/vim-pathogen/autoload/pathogen.vim
+call pathogen#infect()
+</code></pre>
+
+<h4>Managing configuration</h4>
+
+<p>If you keep extending your <code>.vimrc</code>, it comes to a point where it's simply too long, so it makes sense to split it into separate chunks that are somewhat related: here's a sample from the bottom of my <code>.vimrc</code>:</p>
+
+<pre><code>source $HOME/.vim/autocommands.vim
+source $HOME/.vim/plugins.vim
+source $HOME/.vim/shortcuts.vim
+</code></pre>
+
+<p>As a bonus, pressing <code>gf</code> in normal mode will open the file under the cursor.</p>
+
+<p>In addition, always take care of reading the documentation for the plugins you use, as they're usually extremely configurable (an example is the <code>plugins.vim</code>) file.</p>
+
+<p>Documentation is usually available by typing <code>:help &lt;term-to-search&gt;</code>, however Hermes has a custom shortcut you can use: by pressing <code>&lt;leader&gt;h</code> with the cursor on a word, it will search the help docs for the word itself.</p>
+
+<p>Plugin configuration is vital in the long run, as the purpose of plugins should be to help you, not getting in your way.</p>
+
+<p>As an example, let's look at the configuration Hermes supplies for Ctrl-p (in <code>~/.hermes/hermes/vim/plugins.vim</code>):</p>
+
+<pre><code>set wildignore+=*/.hg/*,*/.svn/*,*/vendor/cache/*,*/public/system/*,*/tmp/*,*/log/*,*/.git/*,*/.jhw-cache/*,*/solr/data/*,*/node_modules/*,*/.DS_Store
+</code></pre>
+
+<p>The <code>wildignore</code> flag is not Ctrl-p specific, as it's used by Vim for a lot autocompletion and expansion functions: the more we remove paths and files it's unlikely we want to parse, the better Vim will perform. And as Ctrl-p uses this pattern to determine a baseline for excluding files to create its index, by setting it right we keep it snappy.</p>
+
+<h4>Daily use cases</h4>
+
+<p>Here are a few examples of what you can do with Vim, bearing in mind that this is not meant to be an exhaustive guide. Instead, we will focus on recurring tasks that usually pop up during a normal workday.</p>
+
+<h5>Shelling out</h5>
+
+<p>Having the shell at your disposal can speed up your workflow tenfold, but to really take advantage of this it's important to learn how to alternate between Vim and the command line.</p>
+
+<p>Sometimes you just need to run a simple shell command, like creating a directory or touching a file. In that situation, press <code>:</code> in normal mode to enter the command mode. Then type <code>!</code> to tell Vim to shell out and perform the command in the shell. So, if you want to create a <code>sample</code> directory, you can type:</p>
+
+<pre><code>:!mkdir sample
+</code></pre>
+
+<p>The command will be performed in the current working directory, you can verify that with <code>:pwd</code>.</p>
+
+<p>When you need to step out the file you're editing, perform a few tasks and then go back, your best option is to suspend Vim with <code>ctrl-z</code> and then resume it with <code>fg</code> when you're done. This is a very straightforward approach, widely used in the Unix world. It works out of the box and has no other requirements.</p>
+
+<p>Alternatively, you can use a different window or pane with Tmux, as we're detailing in chapter XXX.</p>
+
+<p>As always, you can associate a shortcut for a shell command you want to run: a good example is creating a leader command to run the current file as a spec.</p>
+
+<pre><code>noremap &lt;leader&gt;s :!bundle exec rspec %&lt;cr&gt;
+</code></pre>
+
+<p>We use <code>noremap</code> to tell vim to create a key map for normal mode, assign it to <code>&lt;leader&gt;s</code> and then specify the command, a simple <code>bundle exec rspec</code> where we press the current file as an argument and then press enter (carriage return).</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-201102-21");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
   </body>
 </html>
