--- a/index.html
+++ b/index.html
@@ -4,32 +4,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Hermes by New-Bamboo</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/New-Bamboo/Hermes">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/New-Bamboo/Hermes/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/New-Bamboo/Hermes/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1 class="header">Hermes</h1>
-        <p class="header">An environment for Ruby and JS developers in Darwin</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/New-Bamboo/Hermes/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/New-Bamboo/Hermes/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/New-Bamboo/Hermes">View On GitHub</a></li>
-        </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/New-Bamboo">New-Bamboo</a></p>
-
-
-      </header>
       <section>
+        <div id="title">
+          <h1>Hermes</h1>
+          <p>An environment for Ruby and JS developers in Darwin</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/New-Bamboo">New-Bamboo</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
+
         <h1>Hermes</h1>
 
 <p>Hermes is an environment for Ruby and JavaScript developers in Darwin using
@@ -716,12 +724,10 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 
 <p>Copyright ©2012 New Bamboo Web Development Limited</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
+
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
