Revert "Create gh-pages branch via GitHub"
This reverts commit 66314e5b6881736385c91a2bb9ef902aeba67613.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ developers around the world. We would like to thank:</p>
 <ul>
 <li>The <a href="http://www.vim.org/">Vim</a> team.</li>
 <li>The <a href="http://tmux.sourceforge.net/">Tmux</a> team.</li>
-<li>The <a href="http://www.gnu.org/software/bash/bash.html">GNU Bash</a> team</li>
+<li>The <a href="http://www.gnu.org/software/bash/bash.html">GNU Bash</a> and <a href="http://ridiculousfish.com/shell/">Fish</a> teams</li>
 <li>The <a href="http://mxcl.github.com/homebrew/">Homebrew</a> team.</li>
 <li>
 <a href="http://tpo.pe/">Tim Pope</a>. Seriously, you're awesome.</li>
