--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
+    <script src="javascripts/jquery.tableofcontents.min.js" type="text/javascript" charset="utf-8"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,12 +20,8 @@
   </head>
   <body>
       <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/New-Bamboo/Hermes">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/New-Bamboo/Hermes/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/New-Bamboo/Hermes/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
+        <ul id="toc"></ul>
+        <a href="https://github.com/New-Bamboo/Hermes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
       </div><!-- end header -->
 
     <div class="wrapper">
@@ -969,16 +966,22 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-201102-21");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+    <script type="text/javascript">
+      //Analytics
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+      try {
+        var pageTracker = _gat._getTracker("UA-201102-21");
+        pageTracker._trackPageview();
+      } catch(err) {}
+      //Table of contents
+      $(document).ready(function(){
+        $("ul#toc").tableOfContents(null, {
+          startLevel: 2,
+          depth: 1
+        });
+      })
+    </script>
 
   </body>
 </html>
