--- a/index.html
+++ b/index.html
@@ -634,8 +634,7 @@ achievable by typing <code>:CtrlPClearCache</code>.</p>
 
 <h3 id="workingwithrails">Working with Rails</h3>
 
-<p>j
-Rails.vim supercharges Vim with functions, shortcuts and a general
+<p>Rails.vim supercharges Vim with functions, shortcuts and a general
 &#8216;rails-awareness&#8217; factor that proves to be invaluable when editing a Rails
 project.</p>
 
