Adds smooth scroll.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <script src="javascripts/jquery.tableofcontents.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="javascripts/jquery.smooth-scroll.min.js" type="text/javascript" charset="utf-8"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -977,6 +978,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
           startLevel: 2,
           depth: 2
         });
+        $("#toc a").smoothScroll();
       })
     </script>
 
