--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p>An environment for Ruby and JS developers in Darwin</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/New-Bamboo">New-Bamboo</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+          <span class="credits right">Originally based on the <a href="https://github.com/mattgraham/Midnight">Midnight</a> theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
 <h1 id="hermes">Hermes</h1>
